--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+/* GENERAL */
+
+button{
+  background-color: transparent;
+  border: none;   
+}
+
+/* HEADER */
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #header{
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 24px;
   align-items: center;
 }
 
@@ -10,7 +23,67 @@
 }
 
 #welcome{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    font-weight: 600;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+/* HEADLINE SECTION */
+
+#landing{
+  padding: 0 24px;
+  background-image: url(./assets/png/header-illsutration-mobile.svg);
+  background-repeat: no-repeat;
+  height: 100%;
+}
+
+#landing div {
+    padding-top: 54px;
+}
+
+h1 {
+  
+  text-align: center  ;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.greeny {
+  color: #36B37E;
+
+}
+
+#main-support-text{
+  margin-top: 58px;
+  font-size: 20px;
+  text-align: center;
+}
+
+#logo-cloud{
+  margin: 0 auto;
+  margin-top: 58px;
+  display: flex;
+  width: 70%;
+  justify-content: space-around;
+  align-items: baseline;
+}
+
+#logo-cloud a img{
+  height: 20px;
+  width: 20px;
+}
+
+#scroll-down{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+#scroll-down button{
+  border: 2px solid dimgray;
+  padding: 15px;
+  border-radius: 999px;
+}
+
+#scroll-down button:hover{
+  background-color: lightgray;
 }
