--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#header{
+#header nav{
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 24px;
