--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* GENERAL */
 
-button{
+button {
   background-color: transparent;
-  border: none;   
+  border: none;
 }
 
 /* HEADER */
@@ -11,25 +11,25 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#header nav{
+#header nav {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 24px;
   align-items: center;
 }
 
-.icon-md{
+.icon-md {
   width: 20px;
 }
 
-#welcome{
+#welcome {
   font-size: 20px;
   font-weight: 600;
 }
 
 /* HEADLINE SECTION */
 
-#landing{
+#landing {
   padding: 0 24px;
   background-image: url(./assets/png/header-illsutration-mobile.svg);
   background-repeat: no-repeat;
@@ -37,28 +37,26 @@ html {
 }
 
 #landing div {
-    padding-top: 54px;
+  padding-top: 54px;
 }
 
 h1 {
-  
-  text-align: center  ;
+  text-align: center;
   font-size: 40px;
   font-weight: 700;
 }
 
 .greeny {
-  color: #36B37E;
-
+  color: #36b37e;
 }
 
-#main-support-text{
+#main-support-text {
   margin-top: 58px;
   font-size: 20px;
   text-align: center;
 }
 
-#logo-cloud{
+#logo-cloud {
   margin: 0 auto;
   margin-top: 58px;
   display: flex;
@@ -67,23 +65,23 @@ h1 {
   align-items: baseline;
 }
 
-#logo-cloud a img{
+#logo-cloud a img {
   height: 20px;
   width: 20px;
 }
 
-#scroll-down{
-    display: flex;
-    width: 100%;
-    justify-content: center;
+#scroll-down {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
-#scroll-down button{
+#scroll-down button {
   border: 2px solid dimgray;
   padding: 15px;
   border-radius: 999px;
 }
 
-#scroll-down button:hover{
+#scroll-down button:hover {
   background-color: lightgray;
 }
