--- a/style.css
+++ b/style.css
@@ -11,11 +11,16 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#header nav {
+#header {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 24px;
   align-items: center;
+}
+
+#header a {
+  text-decoration: none;
+  color: black;
 }
 
 .icon-md {
@@ -29,14 +34,14 @@ html {
 
 /* HEADLINE SECTION */
 
-#landing {
+.landing {
   padding: 0 24px;
   background-image: url(./assets/png/header-illsutration-mobile.svg);
   background-repeat: no-repeat;
   height: 100%;
 }
 
-#landing div {
+.landing div {
   padding-top: 54px;
 }
 
@@ -56,7 +61,8 @@ h1 {
   text-align: center;
 }
 
-#logo-cloud {
+#logo-cloud ul {
+  list-style: none;
   margin: 0 auto;
   margin-top: 58px;
   display: flex;
@@ -65,23 +71,19 @@ h1 {
   align-items: baseline;
 }
 
-#logo-cloud a img {
-  height: 20px;
-  width: 20px;
-}
-
-#scroll-down {
+.scroll-down {
+  margin-top: 24px;
   display: flex;
   width: 100%;
   justify-content: center;
 }
 
-#scroll-down button {
+.scroll-down button {
   border: 2px solid dimgray;
   padding: 15px;
   border-radius: 999px;
 }
 
-#scroll-down button:hover {
+.scroll-down button:hover {
   background-color: lightgray;
 }
