--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h1 {
   margin-top: 56px;
 }
 
-.section{
+.section {
   display: grid;
   align-items: center;
   justify-items: center;
@@ -160,12 +160,124 @@ h2 {
 }
 
 .card a {
-color: white;
-text-decoration: none;
-font-size: 20px;
-font-weight: 600;
-background-color: #36b37f;
-border-radius: 5px;
-padding: 12px;
-margin: 20px auto;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: #36b37f;
+  border-radius: 5px;
+  padding: 12px;
+  margin: 20px auto;
+}
+
+.card a:hover {
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+}
+
+.card a:active {
+  background-color: #008552;
+}
+
+/* ABOUT ME SECTION */
+#about-me {
+  margin-top: 100px;
+}
+
+.about-me-first {
+  position: relative;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  margin-top: 56px;
+  align-items: center;
+}
+
+.about-me-first p {
+  font-size: 20px;
+  text-align: center;
+  line-height: 32px;
+}
+
+.about-me-first a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: #36b37f;
+  border-radius: 5px;
+  padding: 12px;
+  margin: 20px auto;
+}
+
+.about-me-first a:hover {
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+}
+
+.about-me-first a:active {
+  background-color: #008552;
+}
+
+#top-right-img {
+  position: absolute;
+  right: 0;
+  right: -30px;
+  top: -30px;
+}
+
+#bottom-left-img {
+  position: absolute;
+  left: -30px;
+  bottom: 30px
+}
+
+.about-me-second {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  margin-top: 56px;
+  row-gap: 32px;
+}
+
+.second-card {
+  padding: 56px 0;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  border: 2px solid lightgray;
+  background-color: #ebf0ee;
+  border-radius: 15px;
+  align-items: center;
+}
+
+.second-card div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 999px;
+  width: 100px;
+  height: 100px;
+  box-shadow: 0px 16px 24px rgba(37, 47, 137, 0.08);
+  margin-bottom: 56px;
+}
+
+.second-card h3 {
+  font-size: 32px;
+}
+
+.second-card ul {
+  padding: 0 8px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  column-gap: 8px; 
+}
+
+.second-card ul li {
+  padding: 8px 12px;
+  background-color: #fff;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  color: #36b37e;
 }
