--- a/style.css
+++ b/style.css
@@ -100,19 +100,23 @@ h1 {
 }
 
 .card ul {
-  padding: 0 8px;
+  padding: 0 4px;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(4, auto);
-  column-gap: 8px;
+  column-gap: 6px;
+  justify-items: center;
+  align-items: center;
 }
 
 .second-card ul {
   padding: 0 8px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(2, auto);
   column-gap: 8px;
+  row-gap: 8px;
 }
 
 #logo-cloud ul {
@@ -201,6 +205,7 @@ h2 {
   border-radius: 5px;
   font-weight: 600;
   font-size: 12px;
+  text-align: center;
 }
 
 /* ABOUT ME SECTION */
@@ -237,12 +242,12 @@ h2 {
 }
 
 .about-me-second {
+  padding: 0;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   margin-top: 56px;
   row-gap: 32px;
 }
-
 .second-card {
   padding: 56px 0;
   display: flex;
