--- a/style.css
+++ b/style.css
@@ -83,10 +83,13 @@ html {
 /* HEADLINE SECTION */
 
 .landing {
-  padding: 0 24px;
   background-image: url(./assets/png/header-illsutration-mobile.svg);
   background-repeat: no-repeat;
   height: 100%;
+}
+
+section {
+  padding: 0 24px;
 }
 
 .landiv {
@@ -300,7 +303,7 @@ h2 {
 .form-section{
   background-image: url("./assets/png/form-img.png");
   background-repeat: no-repeat;
-  background-position: right 5px bottom 60px;
+  background-position: right 0px bottom 60px;
 }
 
 .invisible{
@@ -335,9 +338,11 @@ textarea{
   display: block;
   margin: 0 auto;
 }
+
 .footer-icons ul{
 padding-bottom: 15px;
 }
+
 #email-id{
   text-decoration: none;
   font-size: 20px;
