--- a/style.css
+++ b/style.css
@@ -23,14 +23,11 @@ ul {
   margin: 0;
 }
 
-
-
 #header {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 24px;
   align-items: center;
-  
 }
 
 .about-me-first a {
@@ -42,6 +39,15 @@ ul {
   border-radius: 5px;
   padding: 12px;
   margin: 20px auto;
+}
+
+.scroll-down a {
+  margin-top: 24px;
+  border: 2px solid dimgray;
+  padding: 15px;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
 }
 
 .card a {
@@ -69,6 +75,10 @@ ul {
 
 .about-me-first a:active {
   background-color: #008552;
+}
+
+.scroll-down a:hover {
+  background-color: lightgray;
 }
 
 #header a {
@@ -153,19 +163,6 @@ form ul {
   display: flex;
   width: 100%;
   justify-content: center;
-}
-
-.scroll-down a {
-  margin-top: 24px;
-  border: 2px solid dimgray;
-  padding: 15px;
-  width: 48px;
-  height: 48px;
-  border-radius: 100%;
-}
-
-.scroll-down a:hover {
-  background-color: lightgray;
 }
 
 /* MY WORK SECTION */
@@ -380,18 +377,18 @@ textarea {
   display: none;
 }
 
-@media only screen  and (min-device-width: 480px){
+@media only screen and (min-device-width: 480px) {
   #landing {
     padding: 200px 0;
     background-image: url(./assets/png/Header-llustration-desktop.png);
     background-position: center top -50px;
     z-index: 0;
   }
-  
+
   #header {
     position: fixed;
     width: 100%;
-    background-color: rgba(255,255,255,.70);
+    background-color: rgba(255, 255, 255, 0.7);
     z-index: 50;
   }
 
@@ -399,7 +396,7 @@ textarea {
     width: 100%;
   }
 
-  #main-support-text{
+  #main-support-text {
     width: 50%;
     margin: 58px auto;
   }
@@ -408,13 +405,13 @@ textarea {
     width: 50%;
     margin: 54px auto;
   }
-  
+
   .only-mobile {
-    display: none
+    display: none;
   }
 
   .only-desktop {
-    display: block
+    display: block;
   }
 
   .desktop-menu {
@@ -422,92 +419,90 @@ textarea {
     width: 100%;
     justify-content: center;
   }
+
   .desktop-menu li {
     padding: 6px 12px;
     font-weight: 600;
     font-size: 15px;
     letter-spacing: 1px;
   }
-
 }
 
-@media only screen  and (min-device-width: 768px){
-
+@media only screen and (min-device-width: 768px) {
   .second {
-    grid-template: "a b" 1fr
-                   "a b" 1fr
-                   "a b" 1fr;
-    }
-    .about-me-first p {
-      width: 50%;
-      margin: 32px auto;
-    }
-    .about-me-second {
-      grid-template-columns: repeat(3, 32%);
-      grid-template-rows: 1fr;
-      column-gap: 2%;
-    }
-    
-    .card h3 {
-      margin: 54px auto;
-    }
+    grid-template: "a b"1fr "a b"1fr "a b"1fr;
+  }
 
-    html {
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    
-    #form-and-title {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      padding: 100px 0;
-    }
+  .about-me-first p {
+    width: 50%;
+    margin: 32px auto;
+  }
 
-    #form-and-title h2 {
-      font-size: 30px;
-      line-height: 50px;
-      width: 35%;
-    }
-    #form-and-title form {
-      width: 60%;
-    }
-    
-    #form-btn {
-      margin:  0;
-    }
-    
-    #footer-icons {
-      margin: 0;
-      padding: 0 30%;
-      width: 100%;
-      justify-content: center;
-      border-top: 2px solid rgba(0,0,0, .1);
-    }
+  .about-me-second {
+    grid-template-columns: repeat(3, 32%);
+    grid-template-rows: 1fr;
+    column-gap: 2%;
+  }
 
-    #footer-icons ul{
-      margin: 0 auto;
-      margin-top: 24px;
-    }
+  .card h3 {
+    margin: 54px auto;
+  }
 
-    #email-id {
-      padding: 0;
-      margin: 0;
-      margin-bottom: 12px;
-    }
+  html {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
 
+  #form-and-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 100px 0;
+  }
+
+  #form-and-title h2 {
+    font-size: 30px;
+    line-height: 50px;
+    width: 35%;
+  }
+
+  #form-and-title form {
+    width: 60%;
+  }
+
+  #form-btn {
+    margin: 0;
+  }
+
+  #footer-icons {
+    margin: 0;
+    padding: 0 30%;
+    width: 100%;
+    justify-content: center;
+    border-top: 2px solid rgba(0, 0, 0, 0.1);
+  }
+
+  #footer-icons ul {
+    margin: 0 auto;
+    margin-top: 24px;
+  }
+
+  #email-id {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 12px;
+  }
 }
 
-@media only screen  and (min-device-width: 1024px){
+@media only screen and (min-device-width: 1024px) {
   .logo-cloud {
     width: 30%;
   }
 
   .second {
-    grid-template: "a b c" 1fr
-                   "a b c" 1fr
-    }
+    grid-template: "a b c"1fr "a b c"1fr;
+  }
 
-    .card img {
-      height: 220px;
-    }
+  .card img {
+    height: 220px;
+  }
 }
