--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul {
   border-radius: 5px;
   padding: 12px;
   margin: 20px auto;
-  transition: all 2s ease-out 0s;
+  transition: all 300ms ease-out 0s;
 }
 
 .card a:hover {
