--- a/style.css
+++ b/style.css
@@ -404,6 +404,35 @@ textarea {
   color: #172b4d;
 }
 
+.menuMobile {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  padding: 108px 0 0 28px;
+}
+
+.menuMobile button {
+  position: absolute;
+  top: 62px;
+  right: 38px;
+}
+
+.menuMobile ul li a {
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 44px;
+  text-decoration: none;
+  color: #3A4A42;
+  padding: 10px 10px;
+}
+
+.menuMobile ul li {
+  margin: 20px 0;
+}
+
 /* RESPONSIVE */
 
 .only-desktop {
