Add linter fixes

--- a/style.css
+++ b/style.css
@@ -63,6 +63,16 @@ ul {
   transition: all 300ms ease-out 0s;
 }
 
+.menu-mobile ul li a {
+  font-family: 'Inter', sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 44px;
+  text-decoration: none;
+  color: #3a4a42;
+  padding: 10px 10px;
+}
+
 .card a:hover {
   box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
   background-color: white;
@@ -427,16 +437,6 @@ textarea {
   right: 38px;
 }
 
-.menu-mobile ul li a {
-  font-family: 'Inter', sans-serif;
-  font-size: 32px;
-  font-weight: 600;
-  line-height: 44px;
-  text-decoration: none;
-  color: #3A4A42;
-  padding: 10px 10px;
-}
-
 .menu-mobile ul li {
   margin: 20px 0;
 }
@@ -454,6 +454,7 @@ textarea {
     background-position: center top -50px;
     z-index: 0;
   }
+
   .menu-mobile {
     display: none;
   }
