Add html and css for the popup window

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ ul {
   border-radius: 100%;
 }
 
-.card a {
+.card .popup-toggle {
   color: white;
   text-decoration: none;
   font-size: 20px;
@@ -73,14 +73,14 @@ ul {
   padding: 10px 10px;
 }
 
-.card a:hover {
+.card .popup-toggle:hover {
   box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
   background-color: white;
   color: #36b37f;
   border: solid 1px #36b37f;
 }
 
-.card a:active {
+.card .popup-toggle:active {
   background-color: #008552;
 }
 
@@ -248,8 +248,8 @@ h2 {
 
 .card img {
   border-radius: 15px;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 300px;
 }
 
 .card h3 {
@@ -414,12 +414,14 @@ textarea {
   color: #172b4d;
 }
 
+/* POPUPS */
+
 .hidden {
   opacity: 0;
 }
 
 .no-display {
-  display: none;
+  display: none !important;
 }
 
 .menu-mobile {
@@ -439,6 +441,92 @@ textarea {
 
 .menu-mobile ul li {
   margin: 20px 0;
+}
+
+.popup-project-overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  backdrop-filter: blur(2px) brightness(50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+  padding-top: 240px;
+  overflow-y: auto;
+  z-index: 50;
+}
+
+.popup-project-content {
+  position:relative;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  background-color: white;
+  padding: 12px;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 24px;
+  font-size: 16px;
+  padding-top: 40px;
+}
+
+.popup-image {
+  max-width: 100%;
+  border-radius: 10px;
+  align-self: center;
+}
+
+.popup-list {
+  display: flex;
+}
+
+.popup-list li {
+  padding: 8px 16px;
+  border-radius: 4px;
+  background-color: #ebf0ee;
+  margin: 16px 4px;
+  font-size: 12px;
+}
+
+.popup-title {
+  text-align: left;
+  font-size: 32px;
+  line-height: 44px;
+  margin: 16px 0;
+}
+
+.popup-button-container {
+  display: flex;
+  width: 100%;
+}
+
+.popup-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 12px;
+  background-color: #36b37f;
+  color: white;
+  font-size: 20px;
+  border-radius: 4px;
+  text-decoration: none;
+  margin: 12px 0px;
+  width: 45%;
+  margin-right: 5%;
+}
+
+.popup-toggle {
+  
+}
+
+.floater {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
 }
 
 /* RESPONSIVE */
@@ -463,7 +551,7 @@ textarea {
     position: fixed;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.7);
-    z-index: 50;
+    z-index: 5;
   }
 
   #header nav {
@@ -566,8 +654,47 @@ textarea {
   }
 
   .card img {
-    height: 220px;
+    height: 300px;
   }
+
+  .popup-project-content{
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .popup-project-overlay {
+    padding-top: 350px;
+  }
+
+  .popup-image {
+    order: -1;
+    margin-bottom: 32px;
+  }
+  
+  .popup-title {
+    order: 0;
+    width: 50%;
+  }
+  
+  .popup-button-container {
+    order: 1;
+    width: 50%;
+  }
+  .popup-button-container a{
+    
+  }
+
+  .popup-list {
+    order: 2;
+  }
+
+  .popup-text {
+    order: 3;
+    margin-bottom: 32px;
+  }
+
 }
 
 @media only screen and (min-device-width: 1024px) {
