--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ ul {
   align-items: center;
 }
 
+.errors {
+  color: red;
+  list-style: disc;
+  margin: 12px 24px;
+}
+
 .about-me-first a {
   color: white;
   text-decoration: none;
@@ -71,6 +77,13 @@ ul {
   text-decoration: none;
   color: #3a4a42;
   padding: 10px 10px;
+}
+
+.form-btn:hover {
+  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
+  background-color: white;
+  color: #36b37f;
+  border: solid 1px #36b37f;
 }
 
 .card .popup-toggle:hover {
